# codewiki

./: CLAUDE.md  Cargo.toml  README.md
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
skills/: codewiki-session.md
skills/codewiki/: SKILL.md
skills/session/: SKILL.md
src/: config.rs  frontmatter.rs  main.rs  meta.rs  setup.rs
