[package]
name = "codewiki"
version = "0.0.2"
edition = "2021"
description = "CLI tool for maintaining LLM-compiled code wikis"

[[bin]]
name = "cw"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
anyhow = "1"
dirs = "6"

[profile.release]
opt-level = 3
lto = true
strip = true
